# mlserve-project

./: .gitignore  DEMO_GUIDE.md  README.md  demo_interview.py  main.py  pyproject.toml  quick_demo.py  serve_ui.py  setup_demo.py  start_demo.sh  stop_demo.sh  test_ray_serve.py
assets/: README.md
scripts/: build_resnet.sh
src/api/: main.py
src/api/endpoints/: health.py  inference.py
src/config/: ray_config.py  settings.py
src/models/: resnet.py  resnet_script.py
src/services/: ray_serve.py
ui/: app.js  create_samples.py  index.html  test.html
