[project]
name = "mlserve-project"
version = "0.1.0"
description = "Production-ready ML model serving platform with Ray Serve and FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.23.0",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "transformers>=4.30.0",
  "ray[serve]>=2.5.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-multipart>=0.0.6",
  "httpx>=0.24.0",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
  "types-requests",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "black>=23.0.0",
  "isort>=5.12.0",
  "pre-commit>=3.3.0",
  "coverage>=7.2.0",
  "ipython>=8.14.0"
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "C90", "UP", "YTT", "S", "A", "C4", "T10", "ICN", "PIE", "PT", "RET", "SIM", "TID", "TCH", "PLR", "PLE", "PLW"]
ignore = ["E501", "S101"]
exclude = [".git", "__pycache__", "build", "dist", "venv", "multipredict-env", ".venv"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]
